--- a/css/main.css
+++ b/css/main.css
@@ -37,17 +37,21 @@ html {
   text-shadow: none;
 }
 
+body{
+  background-color: powderblue;
+}
+
 /*
  * A better looking default horizontal rule
  */
 
 hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
+
+  border-style: none;
+  border-top-style: dotted;
+  border-color: gray;
+  border-width: 5px;
+  width: 5%;
 }
 
 /*
@@ -55,7 +59,7 @@ hr {
  * images, videos and the bottom of their containers:
  * https://github.com/h5bp/html5-boilerplate/issues/440
  */
-
+/**
 audio,
 canvas,
 iframe,
@@ -65,9 +69,9 @@ video {
   vertical-align: middle;
 }
 
-/*
+
  * Remove default fieldset styles.
- */
+
 
 fieldset {
   border: 0;
@@ -75,39 +79,39 @@ fieldset {
   padding: 0;
 }
 
-/*
+
  * Allow only vertical resizing of textareas.
- */
+
 
 textarea {
   resize: vertical;
 }
 
-/* ==========================================================================
+ ==========================================================================
    Author's custom styles
-   ========================================================================== */
+   ==========================================================================
 
-/* ==========================================================================
+ ==========================================================================
    Helper classes
-   ========================================================================== */
+   ==========================================================================
 
-/*
+
  * Hide visually and from screen readers
- */
+
 
 .hidden,
 [hidden] {
   display: none !important;
 }
 
-/*
+
  * Hide only visually, but have it available for screen readers:
  * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  *
  * 1. For long content, line feeds are not interpreted as spaces and small width
  *    causes content to wrap 1 word per line:
  *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
+
 
 .sr-only {
   border: 0;
@@ -119,14 +123,14 @@ textarea {
   position: absolute;
   white-space: nowrap;
   width: 1px;
-  /* 1 */
+
 }
 
-/*
+
  * Extends the .sr-only class to allow the element
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
- */
+
 
 .sr-only.focusable:active,
 .sr-only.focusable:focus {
@@ -139,15 +143,15 @@ textarea {
   width: auto;
 }
 
-/*
+
  * Hide visually and from screen readers, but maintain layout
- */
+
 
 .invisible {
   visibility: hidden;
 }
 
-/*
+
  * Clearfix: contain floats
  *
  * For modern browsers
@@ -157,7 +161,7 @@ textarea {
  *    that receive the `clearfix` class.
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
- */
+
 
 .clearfix::before,
 .clearfix::after {
@@ -169,28 +173,28 @@ textarea {
   clear: both;
 }
 
-/* ==========================================================================
+==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
-   ========================================================================== */
+   ==========================================================================
 
 @media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+   Style adjustments for viewports that meet the condition
 }
 
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
   (min-resolution: 1.25dppx),
   (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+   Style adjustments for high resolution devices
 }
 
-/* ==========================================================================
+==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
    https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
+   ==========================================================================
 
 @media print {
   *,
@@ -198,7 +202,7 @@ textarea {
   *::after {
     background: #fff !important;
     color: #000 !important;
-    /* Black prints faster */
+     Black prints faster
     box-shadow: none !important;
     text-shadow: none !important;
   }
@@ -216,10 +220,10 @@ textarea {
     content: " (" attr(title) ")";
   }
 
-  /*
+
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
-   */
+
   a[href^="#"]::after,
   a[href^="javascript:"]::after {
     content: "";
@@ -235,10 +239,10 @@ textarea {
     page-break-inside: avoid;
   }
 
-  /*
+
    * Printing Tables:
    * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
-   */
+
   thead {
     display: table-header-group;
   }
@@ -261,3 +265,5 @@ textarea {
   }
 }
 
+
+ */
