--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ html {
 }
 
 body{
-  background-color: powderblue;
+  background-color: #EAF6F6;
 }
 
 /*
@@ -52,6 +52,13 @@ hr {
   border-color: gray;
   border-width: 5px;
   width: 5%;
+}
+
+h1,
+h2,
+h3{
+  color: #66BFBF;
+
 }
 
 /*
